# testbot-gpt

./: .env_example  .gitignore  .pylintrc  LICENSE.txt  README.md  delete.py  pyproject.toml  testbot copy.py  testbot.py
.github/workflows/: pylint.yml
files/: petstore.yml  sample json.json  tests.py
